# struct-mapper

./: 404.html  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  attributes.html  errors.html  getting-started.html  index.html  print.html  searchindex.js  searchindex.json
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: header.html
features/: basic.html  combined.html  custom.html  index.html  nested.html  rename.html  skip.html  try-from.html
guide/: book.toml
guide/book/: 404.html  attributes.html  errors.html  getting-started.html  index.html  print.html  searcher-c2a407aa.js  searchindex-37f7dcea.js  searchindex-3b3d1227.js  searchindex-419113de.js  toc-0a53999c.js  toc-751d93db.js  toc.html
guide/book/features/: basic.html  combined.html  custom.html  index.html  nested.html  rename.html  skip.html  try-from.html
guide/src/: README.md  SUMMARY.md  attributes.md  errors.md  getting-started.md
guide/src/features/: README.md  basic.md  combined.md  custom.md  nested.md  rename.md  skip.md
struct-mapper/: Cargo.toml
struct-mapper-derive/: Cargo.toml
struct-mapper-derive/src/: codegen.rs  error.rs  field_match.rs  lib.rs  parse.rs
struct-mapper/examples/: advanced_mapping.rs  basic_mapping.rs
struct-mapper/src/: lib.rs
struct-mapper/tests/: integration.rs  try_from_basic.rs  try_from_errors.rs  try_from_mixed.rs  try_from_try_into.rs  try_from_try_with.rs
