[package]
name = "struct-mapper-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
readme = "../README.md"
description = "Procedural macro implementation for struct-mapper — do not depend on this directly, use struct-mapper instead"
keywords = ["derive", "macro", "struct", "mapping", "from"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
